--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@
             <ul class="flex space-x-6">
                 <li><a href="#" class="hover:text-gray-400">Home</a></li>
                 <li><a href="buy-a-car.htm" class="hover:text-gray-400">Buy A Car</a></li>
-                <li><a href="#" class="hover:text-gray-400">Sell A Car.html</a></li>
-                <li><a href="#" class="hover:text-gray-400">Car Rental</a></li>
+                <li><a href="#" class="hover:text-gray-400">Sell A Car</a></li>
+                <li><a href="rent-a-car.htm" class="hover:text-gray-400">Rent A Car</a></li>
                 <li><a href="#" class="hover:text-gray-400">Spare Parts</a></li>
                 <li><a href="#" class="hover:text-gray-400">Car Photography</a></li>
                 <li><a href="#" class="hover:text-gray-400">Showrooms</a></li>
